@@ -1,1 +1,1 @@
-#define KWM_VERSION "kwm 0.13 patchlevel 4"
+#define KWM_VERSION "kwm 0.13 patchlevel 5"
